Updated notebook files

--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-03T19:44:31.073423Z",
-     "start_time": "2024-06-03T19:44:31.054251Z"
+     "end_time": "2024-06-04T13:47:12.045474Z",
+     "start_time": "2024-06-04T13:47:12.026260Z"
     }
    },
    "outputs": [
@@ -32,18 +32,32 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "results_path='../results/telco_3var_9depth.json'\n",
-    "test_set_path='../data/train_test_data/telco_3vars_test.csv'\n"
+    "results_path='../results/kkbox_3var_9depth.json'\n",
+    "test_set_path='../data/train_test_data/kkbox_3vars_test.csv'\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-03T19:44:31.293258Z",
-     "start_time": "2024-06-03T19:44:31.279298Z"
+     "end_time": "2024-06-04T13:47:12.378604Z",
+     "start_time": "2024-06-04T13:47:12.366295Z"
     }
    },
    "id": "e7c452a054dc7622",
-   "execution_count": 17
+   "execution_count": 39
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-04T13:47:12.809924Z",
+     "start_time": "2024-06-04T13:47:12.806654Z"
+    }
+   },
+   "id": "66fb02f973e5b582",
+   "execution_count": 39
   },
   {
    "cell_type": "code",
@@ -52,110 +66,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation of the Symbolic Regression model with expression (D^3+B^5)-log(sqrt(A)): \n",
-      " [[ 68 132]\n",
-      " [123  51]]\n",
-      "- AUC score: 0.32\n",
-      "- Precision: 0.28\n",
-      "- Recall: 0.29\n",
-      "- F1 score: 0.29\n",
+      "Evaluation of the Symbolic Regression model with expression exp(exp(D))-(exp(B))^2: \n",
+      " [[4073  394]\n",
+      " [ 219 4199]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (D/A-cos(D))+(D*B)*D: \n",
-      " [[187  13]\n",
-      " [ 87  87]]\n",
-      "- AUC score: 0.72\n",
-      "- Precision: 0.87\n",
-      "- Recall: 0.5\n",
-      "- F1 score: 0.64\n",
+      "Evaluation of the Symbolic Regression model with expression (exp(D)-B)-(B*exp(A)-exp(D)): \n",
+      " [[4073  394]\n",
+      " [ 219 4199]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (D+B)-log(sqrt(A)): \n",
-      " [[178  22]\n",
-      " [ 74 100]]\n",
-      "- AUC score: 0.73\n",
-      "- Precision: 0.82\n",
-      "- Recall: 0.57\n",
-      "- F1 score: 0.68\n",
+      "Evaluation of the Symbolic Regression model with expression ((D-A)-B)^3+exp(A): \n",
+      " [[4073  394]\n",
+      " [ 219 4199]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (B*D+(D/A)*D)-cos(D): \n",
-      " [[187  13]\n",
-      " [ 87  87]]\n",
-      "- AUC score: 0.72\n",
-      "- Precision: 0.87\n",
-      "- Recall: 0.5\n",
-      "- F1 score: 0.64\n",
+      "Evaluation of the Symbolic Regression model with expression ((exp(D)-B)-B)*exp(A): \n",
+      " [[4074  393]\n",
+      " [ 228 4190]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (D+B)-log(B+sqrt(A)): \n",
-      " [[183  17]\n",
-      " [ 90  84]]\n",
-      "- AUC score: 0.7\n",
-      "- Precision: 0.83\n",
-      "- Recall: 0.48\n",
-      "- F1 score: 0.61\n",
+      "Evaluation of the Symbolic Regression model with expression exp(exp(D)-A)-exp(B): \n",
+      " [[4103  364]\n",
+      " [ 490 3928]]\n",
+      "- AUC score: 0.9\n",
+      "- Precision: 0.92\n",
+      "- Recall: 0.89\n",
+      "- F1 score: 0.9\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (D+exp(B))-log(A): \n",
-      " [[168  32]\n",
-      " [ 66 108]]\n",
-      "- AUC score: 0.73\n",
-      "- Precision: 0.77\n",
-      "- Recall: 0.62\n",
-      "- F1 score: 0.69\n",
+      "Evaluation of the Symbolic Regression model with expression (B-exp(D))^4-(B+(B+B)): \n",
+      " [[4075  392]\n",
+      " [ 222 4196]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (D+sqrt(B))-log(D+sqrt(A)): \n",
-      " [[193   7]\n",
-      " [109  65]]\n",
-      "- AUC score: 0.67\n",
-      "- Precision: 0.9\n",
-      "- Recall: 0.37\n",
-      "- F1 score: 0.53\n",
+      "Evaluation of the Symbolic Regression model with expression (exp(D)-(B-exp(D)))-B*exp(A): \n",
+      " [[4073  394]\n",
+      " [ 219 4199]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (B+D)-log(A/sqrt(A)): \n",
-      " [[178  22]\n",
-      " [ 74 100]]\n",
-      "- AUC score: 0.73\n",
-      "- Precision: 0.82\n",
-      "- Recall: 0.57\n",
-      "- F1 score: 0.68\n",
+      "Evaluation of the Symbolic Regression model with expression exp(exp(D+D)-B)-exp(B): \n",
+      " [[4072  395]\n",
+      " [ 216 4202]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (B+B*B)-log(A/exp(D+D)): \n",
-      " [[163  37]\n",
-      " [ 61 113]]\n",
-      "- AUC score: 0.73\n",
-      "- Precision: 0.75\n",
-      "- Recall: 0.65\n",
-      "- F1 score: 0.7\n",
+      "Evaluation of the Symbolic Regression model with expression (exp(D+D)-B)-(B*A+B): \n",
+      " [[4073  394]\n",
+      " [ 219 4199]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n",
       "\n",
       "\n",
-      "Evaluation of the Symbolic Regression model with expression (D+exp(B))-log(A+D): \n",
-      " [[171  29]\n",
-      " [ 68 106]]\n",
-      "- AUC score: 0.73\n",
-      "- Precision: 0.79\n",
-      "- Recall: 0.61\n",
-      "- F1 score: 0.69\n",
-      "\n"
+      "Evaluation of the Symbolic Regression model with expression exp(exp(D))-(exp(B))^2: \n",
+      " [[4073  394]\n",
+      " [ 219 4199]]\n",
+      "- AUC score: 0.93\n",
+      "- Precision: 0.91\n",
+      "- Recall: 0.95\n",
+      "- F1 score: 0.93\n"
      ]
     }
    ],
    "source": [
-    "evaluate_SR_expression(results_path, test_set_path, threshold=0.5)"
+    "evaluate_SR_expression(results_path, test_set_path, threshold=0.5, num_vars=3)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-03T19:45:01.512623Z",
-     "start_time": "2024-06-03T19:45:01.452221Z"
+     "end_time": "2024-06-04T15:32:08.302117Z",
+     "start_time": "2024-06-04T15:32:08.171935Z"
     }
    },
    "id": "c4eb0814b7bd5e5d",
-   "execution_count": 19
+   "execution_count": 55
   },
   {
    "cell_type": "code",
